--- a/shop/src/main/webapp/resources/css/loginForm.css
+++ b/shop/src/main/webapp/resources/css/loginForm.css
@@ -15,7 +15,10 @@ a{color:inherit;text-decoration:none}
   max-width:505px;
   min-height:860px;
   position:relative;
-  background:url(https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FdEyE1u%2FbtqA2Ux2n3i%2FBNoFGyInlZ3LKgl33hohKk%2Fimg.jpg) no-repeat center;
+  background:url(../cbimg/brad-pearson-Lhx8ioIdZyE-unsplash.jpg) no-repeat center;
+  background-size: cover;
+	background-repeat:  no-repeat;
+	background-position: center;
   box-shadow: 0 12px 15px 0 rgba(255, 165, 0, 0.1), 0 17px 50px 0 rgba(255, 165, 0, 0.08);
 }
 .login-html{
@@ -23,7 +26,7 @@ a{color:inherit;text-decoration:none}
   height:100%;
   position:absolute;
   padding:90px 70px 50px 70px;
-  background: rgba(255, 165, 20, 0.35);
+  background: rgb(254, 235, 214,0.35);
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
@@ -112,7 +115,8 @@ a{color:inherit;text-decoration:none}
   font-size:14px;
 }
 .login-form .group .button{
-  background:#1ba4f5;
+ background-color:transparent;
+ font-size: 20px;
 }
 .login-form .group label .icon{
   width:15px;
