--- a/shop/src/main/webapp/resources/css/loginForm.css
+++ b/shop/src/main/webapp/resources/css/loginForm.css
@@ -1,7 +1,7 @@
 body{
   margin:0;
-  color:#515151;
-  background:#c8c8c8;
+  color: white;
+  background-color: white;
   font:600 16px/18px 'Open Sans',sans-serif;
 }
 *,:after,:before{box-sizing:border-box}
@@ -21,13 +21,14 @@ a{color:inherit;text-decoration:none}
 	background-position: center;
   box-shadow: 0 12px 15px 0 rgba(255, 165, 0, 0.1), 0 17px 50px 0 rgba(255, 165, 0, 0.08);
 }
-.login-html{
-  width:100%;
-  height:100%;
-  position:absolute;
-  padding:90px 70px 50px 70px;
-  background: rgb(254, 235, 214,0.35);
+.login-html {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  padding: calc(50vh - 430px) 70px 50px 70px; /* 수정된 부분 */
+  background: rgba(254, 235, 214, 0.35); /* 수정된 부분 */
 }
+
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
   top:0;
